--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,28 +8,25 @@ body{
 }
 
 canvas{
-	margin-top:110;
 	/*background-color:Silver;*/
 	display:inline;
 }
 
 #canvasBack,
 #canvasFront { cursor: pointer; }
+
+#canvasBack:after,
+#canvasFront:after { border: 8px dashed #F00; content: ""; display: block; height: 284px; left: 0; position: absolute; top: 0; width: 384px; }
+
 #canvasBack { background: url('../img/takePicBack.png') 0 0 no-repeat; }
 #canvasFront { background: url('../img/takePicFront.png') 0 0 no-repeat; }
 
 video{
-	margin-top:110;
 	background-color:Silver;
 	display:inline;
 }
 
-#projectTitle{
-	display:inline-block;
-	position:relative;
-	text-align: right;
-
-}
+#projectTitle { position: relative; text-align: center; }
 
 .smallText{
 	font-family: 'Roboto Slab', serif;
@@ -41,7 +38,6 @@ h1{
 	font-family: 'Roboto Slab', serif;
 	display:inline-block;
 	font-size: 50px;
-	margin-right:30px;
 	color:YellowGreen ;
 }
 
@@ -100,16 +96,6 @@ h1{
 #projectShot{
 	position:relative;
 	display:inline;
-}
-
-#topScrollButtonLeft{
-	text-align: center;
-	margin: 0px auto;
-	position: absolute;
-	top: 0;
-	width: 90px;
-	height: 120px;
-	background-color:YellowGreen;
 }
 
 hr{
