--- a/templates/main.html
+++ b/templates/main.html
@@ -12,24 +12,13 @@
 <body>
 
 	<div id="container">
+		<h1> 1 MINUTE MUG ON A MUG</h1>
+		
+		<!--
 		<div id="topScrollFrame">
-			<div id="topScrollButtonLeft">
-				<button id="convertFront">Step 3 : Make Pdf</button>
-				
-
-				<!-- <a href="#" class="btn btn-primary download-pdf">Download PDF</a> -->
-			</div>
-
-			<div id="projectTitle">
-				<h1> 1 MINUTE MUG ON A MUG</h1>
-			</div>
-
-
 			<div id="topScrollArtZone">
 
-
-
-<!-- 				<ul id="stickerPack">
+ 				<ul id="stickerPack">
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
@@ -40,17 +29,18 @@
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
 					<li class="stickerToPick"><img src="src/img/placeholder.gif"></li>
-				</ul> -->
+				</ul>
 			</div>
-		</div>
+		</div>-->
 		<!-- <div id="compositionCanvas"> -->
 
 
-
+		<div id="screens">
 			<video id="video" width="400" height="300" autoplay></video>
 
 			<canvas id="canvasFront" width="400" height="300"></canvas>
 			<canvas id="canvasBack" width="400" height="300"></canvas>
+		</div>
 <!-- 
 			<div id="projectShot">
 			
@@ -141,7 +131,7 @@ document.getElementById("canvasBack").addEventListener("click", function() {
 
 });
  
-document.getElementById("convertFront").addEventListener("click",function(){
+/*document.getElementById("convertFront").addEventListener("click",function(){
 	var canvasFront = document.getElementById("canvasFront");
 	var imgData    = canvasFront.toDataURL('image/jpeg');
 
@@ -151,7 +141,7 @@ document.getElementById("convertFront").addEventListener("click",function(){
 	doc.addImage(imgData, 'JPEG', 0, 0, 180, 160);
 	doc.save('Test.pdf');
 
-});
+});*/
 
 // document.getElementById("convertBack").addEventListener("click",function(){
 // 	var canvasBack = document.getElementById("canvasBack");
